# pango

./: CODING_STYLE.md  NEWS  README.md  README.win32  meson.build  meson_options.txt  vogue.doap
docs/: layout.eps  layout.fig  meson.build  vogue-docs.sgml  vogue-sections.txt  vogue.types.in  vogue_markup.sgml
docs/xml/: meson.build
examples/: cairoshape.c  cairosimple.c  cairotwisted.c  meson.build  voguewin32tobmp.c
tests/: cxx-test.cpp  dump-boundaries.c  markup-parse.c  meson.build  test-break.c  test-common.c  test-common.h  test-coverage.c  test-ellipsize.c  test-font.c  test-harfbuzz.c  test-itemize.c  test-layout.c  test-ot-tags.c  test-shape.c  test-voguecairo-threads.c  testattributes.c  testboundaries.c  testboundaries_ucd.c  testcolor.c  testiter.c  testscript.c
tests/breaks/: two.break
tools/: gen-break-table.py  gen-color-table.pl  gen-emoji-table.py  gen-script-for-lang.c  meson.build
utils/: HELLO.txt  meson.build  viewer-cairo.c  viewer-cairo.h  viewer-main.c  viewer-render.c  viewer-render.h  viewer-voguecairo.c  viewer-vogueft2.c  viewer-voguexft.c  viewer-x.c  viewer-x.h  viewer.h  vogue-list.c  vogue-view.c
vogue/: break-arabic.c  break-indic.c  break-thai.c  break.c  ellipsize.c  fonts.c  glyphstring.c  meson.build  modules.c  reorder-items.c  shape.c  vogue-attributes.c  vogue-attributes.h  vogue-bidi-type.c  vogue-bidi-type.h  vogue-break-table.h  vogue-break.h  vogue-color-table.h  vogue-color.c  vogue-context.c  vogue-context.h  vogue-coverage-private.h  vogue-coverage.c  vogue-coverage.h  vogue-direction.h  vogue-emoji-private.h  vogue-emoji-table.h  vogue-emoji.c  vogue-engine.c  vogue-engine.h  vogue-enum-types.c.template  vogue-enum-types.h.template  vogue-font-private.h  vogue-font.h  vogue-fontmap-private.h  vogue-fontmap.c  vogue-fontmap.h  vogue-fontset-private.h  vogue-fontset.c  vogue-fontset.h  (+92 more)
